discussion/kv_engine/128640/128640_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-20 15:44:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 17:59:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2312/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: unknown type name "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: unknown type name "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:65:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_storage_age_highwat, microseconds)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2312/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6:
error: unknown type name "ep_storage_age" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2312/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24150/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24150/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3847/ : FAILURE

Compile error at [2020-05-20T17:04:55.924Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3847/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3752/ : FAILURE

Compile error at [2020-05-20T16:51:44.535Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3790/ : FAILURE

Compile error at [2020-05-20T16:55:11.725Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11627/ : FAILURE

Compile error at [2020-05-20T17:19:32.208Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2854/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/828/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
